Fixing alignment

--- a/public/css/s36_client_style.css
+++ b/public/css/s36_client_style.css
@@ -102,7 +102,7 @@
     top:11px;
     /*Temporary until viewall button is fixed*/
     /*right:170px;*/
-    right:44px;
+    right:40px;
     z-index:10000
 }
 .s36_embed_block_y{font-family:Arial, Helvetica, sans-serif;font-weight:bold;color:#333;position:absolute;bottom:58px;left:5px;z-index:10000}
